--- a/.gitignore
+++ b/.gitignore
@@ -205,3 +205,29 @@ cython_debug/
 marimo/_static/
 marimo/_lsp/
 __marimo__/
+
+# Secrets and credentials
+.env
+*.json
+*.key
+credentials/
+
+# dbt specific
+dbt_project/target/
+dbt_project/dbt_packages/
+dbt_project/logs/
+
+# Data files (we don't want to commit large CSV files)
+*.csv
+*.xlsx
+*.parquet
+data/raw/
+data/processed/
+
+# Mac specific
+.DS_Store
+
+# Testing
+.pytest_cache/
+.coverage
+htmlcov/
